--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,17 @@
+
 <html>
   <head>
     <script>document.write('<base href="' + document.location + '" />');</script>
-    <title>Angular 2 QuickStart</title>
+    <title>Destiny</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+
+    <base href="/">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <link href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css" rel="stylesheet">
+   
 
   
 <!-- Latest compiled and minified CSS -->
@@ -14,8 +19,7 @@
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
- <script src="app/public/js/canvasjs.min.js"></script>
- <script src="app/public/js/jquery.canvasjs.min.js"></script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
@@ -23,13 +27,17 @@
 
 
     <!-- 1. Load libraries -->
-     <!-- Polyfill(s) for older browsers -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
+  
+   <script src="js/vendor/shim.min.js"></script>
+    <script src="js/vendor/zone.min.js"></script>
+    <script src="js/vendor/Reflect.js"></script>
+    <script src="js/vendor/system.js"></script>
 
-  <script src="app/public/js/chart.js"></script>
+    <script src="js/systemjs.config.js"></script>
+    <script>
+      System.import('app').catch(function(err) { console.error(err); });
+    </script>
+
  
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -37,11 +45,7 @@
 
 
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <!-- 2. Configure SystemJS -->
-    <script src="systemjs.config.js"></script>
-    <script>
-      System.import('app').catch(function(err){ console.error(err); });
-    </script>
+ 
   </head>
   <!-- 3. Display the application -->
   <body>
