--- a/public/index.html
+++ b/public/index.html
@@ -50,5 +50,6 @@
   <!-- 3. Display the application -->
   <body>
     <my-app>Loading...</my-app>
+     <script src="js/bundle.min.js"></script>
   </body>
 </html>
