--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,24 @@
 
 <html>
   <head>
-    <script>document.write('<base href="' + document.location + '" />');</script>
-    <title>Destiny</title>
+    <title>Angular 2 QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-
+    <link rel="stylesheet" href="css/style.css">
     <base href="/">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   
-
-  
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
-    <!-- 1. Load libraries -->
-  
-   <script src="js/vendor/shim.min.js"></script>
+    <!-- Polyfill(s) for older browsers -->
+    <script src="js/vendor/shim.min.js"></script>
     <script src="js/vendor/zone.min.js"></script>
     <script src="js/vendor/Reflect.js"></script>
-    <script src="js/vendor/system.js"></script>
-
-    <script src="js/systemjs.config.js"></script>
-    <script>
-      System.import('app').catch(function(err) { console.error(err); });
-    </script>
-
- 
-
-    
-  
-
-
-  
- 
   </head>
+
   <!-- 3. Display the application -->
   <body>
     <my-app>Loading...</my-app>
-     <script src="js/bundle.min.js"></script>
+
+    <!-- Production mod -->
+    <script src="js/bundle.min.js"></script>
   </body>
 </html>
