--- a/public/index.dev.html
+++ b/public/index.dev.html
@@ -1,9 +1,31 @@
 <html>
   <head>
-    <title>Angular 2 QuickStart</title>
+    <script>document.write('<base href="' + document.location + '" />');</script>
+    <title> Destiny </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
+    <style>
+@font-face {
+			font-family: 'Aldo';
+			src: url('/font/Aldo-SemiBold.eot');
+			src: url('/font/Aldo-SemiBold.eot?#iefix') format('embedded-opentype'),
+				url('/font/Aldo-SemiBold.woff') format('woff'),
+				url('/font/Aldo-SemiBold.ttf') format('truetype');
+			font-weight: 600;
+			font-style: normal;
+		}
+</style>
     <base href="/">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
@@ -25,3 +47,4 @@
     <my-app>Loading...</my-app>
   </body>
 </html>
+
